# Canvas

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  index.html  package-lock.json  package.json  splash.html
.cargo/: config.toml
.github/workflows/: build.yml
design/: contextual-crop-discovery.md  crop-and-brush-implementation.md  image-editing-and-session-management.md
public/: splash.html
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.json
src-tauri/examples/: test_vlm_onnx.rs
src-tauri/icons/: icon.icns
src-tauri/resources/templates/r-4b/: chat_template.jinja  long-think.jinja  no-think.jinja
src-tauri/src/: audio_decoder.rs  inference_engine.rs  lib.rs  llama_inference.rs  main.rs  model_manager.rs  sam3_engine.rs  sam3_image_processor.rs  system_prompts.rs  vlm_onnx.rs
src-tauri/tests/: contextual_crop_test.rs  inference_integration_test.rs  inference_test.rs  model_manager_test.rs  packraft_test.rs  sam3_test.rs
src/components/: AddModelDialog.css  AddModelDialog.tsx  AudioViewer.css  AudioViewer.tsx  ChatPanel.css  ChatPanel.tsx  DownloadModelDialog.css  DownloadModelDialog.tsx  DrawingOverlay.css  DrawingOverlay.tsx  DropZone.css  DropZone.tsx  ImageViewer.css  ImageViewer.tsx  Layout.css  Layout.tsx  ModelSelectionModal.css  ModelSelectionModal.tsx  ModelSelector.css  ModelSelector.tsx  Sam3Controls.css  Sam3Controls.tsx  Sam3Overlay.css  Sam3Overlay.tsx  SelectionOverlay.css  SelectionOverlay.tsx  SystemPromptEditor.tsx  Toolbar.css  Toolbar.tsx  index.ts
src/styles/: global.css
src/types/: index.ts  sam3.ts  selection.ts
