[package]
name = "baseweightcanvas"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "baseweightcanvas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time", "sync", "fs"] }
libloading = "0.8"
once_cell = "1.20"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
directories = "5.0"
symphonia = { version = "0.5", features = ["mp3", "wav", "flac"] }
image = "0.24"
ndarray = "0.16.1"
tokenizers = { version = "0.22.1" }
thiserror = "1.0"
base64 = "0.22"

# ONNX Runtime with platform-specific execution providers
[target.'cfg(target_os = "windows")'.dependencies]
ort = { version = "=2.0.0-rc.10", features = ["directml", "download-binaries"] }

[target.'cfg(target_os = "linux")'.dependencies]
ort = { version = "=2.0.0-rc.10", features = ["cuda", "download-binaries"] }

[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "=2.0.0-rc.10", features = ["coreml", "download-binaries"] }

[dev-dependencies]
tempfile = "3.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

